--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,8 +4,14 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
-      %th Rating
+      - if @sort_type == 'title'
+        %th.hilite= link_to 'Movie Title', sort_title_url, :id => "title_header"
+      - else
+        %th= link_to 'Movie Title', sort_title_url, :id => "title_header"
+      - if @sort_type == 'rating'
+        %th.hilite= link_to 'Rating', sort_rating_url, :id => "release_date_header"
+      - else
+        %th= link_to 'Rating', sort_rating_url, :id => "release_date_header"
       %th Release Date
       %th More Info
   %tbody
