--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -6,6 +6,7 @@
   - @all_ratings.each do |rating|
     = rating
     = check_box_tag "ratings[#{rating}]", 1, if @selected_ratings; @selected_ratings.include?(rating) else true end, :id => "ratings_#{rating}"
+    // name, value, condition to persist checkboxes and show by default, id
   = submit_tag 'Refresh', :id => "ratings_submit"
 
 %table#movies
